--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,9 @@
 @import "variables.scss";
 
+@import "mixins.scss";
 @import "structure.scss";
 @import "nav.scss";
 @import "home/home.scss";
 @import "footer.scss";
 @import "about/about.scss";
+@import "tours/tours.scss";
