--- a/css/styles.css
+++ b/css/styles.css
@@ -535,8 +535,26 @@ footer .wrapper .links i:hover {
 .travel-cards .card.usa {
   background-image: url("../images/tour/tour-02.jpg");
 }
-.travel-cards .card.austrailia {
+.travel-cards .card.australia {
   background-image: url("../images/tour/tour-03.jpg");
+}
+.travel-cards .card.newzealand {
+  background-image: url("../images/tour/tour-04.jpg");
+}
+.travel-cards .card.france {
+  background-image: url("../images/tour/tour-05.jpg");
+}
+.travel-cards .card.egypt {
+  background-image: url("../images/tour/tour-06.jpg");
+}
+.travel-cards .card.japan {
+  background-image: url("../images/tour/tour-07.jpg");
+}
+.travel-cards .card.canada {
+  background-image: url("../images/tour/tour-08.jpg");
+}
+.travel-cards .card.uae {
+  background-image: url("../images/tour/tour-09.jpg");
 }
 
 /*# sourceMappingURL=styles.css.map */
